# gen-ai-knowledge-base

./: README.md  iac.sh  setup.cfg  setup.py
ai_knowledge_base/: config.py  model.py
ai_knowledge_base/embedding/: ai_search.py  nosql.py
ai_knowledge_base/utils/: document.py  transport.py  watchtower.py
example/: dev.ipynb  embedding-ai-search-resultant-sales.ipynb  embedding-ai-search.ipynb  embedding-nosql.ipynb  sample-layout  sample-xlsx copy.json  sample-xlsx.json  set-env  xlsx2html.ipynb
