[metadata]
name = ai-knowledge-base
version = 0.1.0
author = Ziang Jia
author_email = zjia@resultant.com
description = 
    Enterprise knowledge base powered Generative AI.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    
[options]
packages = find:
install_requires =
    dataclasses-json>=0.5.7
    dataclasses-jsonschema>=2.16
    pandas
    numpy
    redis>=4.5.5
    pyodbc>=4.0.39
    openai>=1.6.0
    greenlet<=2.0.2
    psycopg2-binary
    fsspec
    tqdm
    ratelimiter
    requests
    langchain
    faiss-cpu
    beautifulsoup4
    pymongo[srv]
    azure-identity
    azure-cosmos
    python-dotenv
    azure-ai-documentintelligence
    azure-storage-blob
    # azure-ai-formrecognizer
    azure-search-documents
    Markdown
    tiktoken
    SQLAlchemy
    chardet
    xlsx2html
python_requires = >=3.8
tests_requires =
    pre-commit
    sphinx
    pytest
    hypothesis

[options.packages.find]
exclude =
    examples*